--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -15,14 +15,12 @@ jobs:
 
     steps:
       - uses: actions/checkout@v4
-      - uses: actions/setup-python@v4
+      - uses: astral-sh/setup-uv@v6
+      - uses: actions/setup-python@v5
         with:
-          python-version: 3.13
+          python-version-file: .python-version
       - run: |
-          python -m pip install --upgrade pip
-          python -m pip install --upgrade setuptools
-          python -m pip install wheel
-          pip install uv
           uv sync
-          uv run black src
-          uv run pylint src
+          uv run ruff format src
+          uv run ruff check src
+          uv run pytest
