--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -20,7 +20,16 @@ jobs:
         with:
           python-version-file: .python-version
       - run: |
+          cat <<EOF > mosquitto.conf
+          listener 1883
+          allow_anonymous true
+          EOF
+          docker run -d --name mosquitto -p 1883:1883 -v ${{ github.workspace }}/mosquitto.conf:/mosquitto/config/mosquitto.conf:ro eclipse-mosquitto:2.0
+      - run: |
           uv sync
           uv run ruff format src
           uv run ruff check src
           uv run pytest
+      - run: |
+          docker stop mosquitto
+          docker rm mosq-broker
