--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -22,6 +22,7 @@ jobs:
       - uses: ezhuk/setup-mosquitto@v11
         with:
           version: 'latest'
+      - uses: mxschmitt/action-tmate@v3
       - run: |
           uv sync
           uv run ruff format src
