--- a/examples/openai/pyproject.toml
+++ b/examples/openai/pyproject.toml
@@ -1,9 +1,10 @@
 [project]
 name = "openai-mcp-example"
-version = "0.1.0"
+version = "0.1.1"
 description = "OpenAI MCP example"
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
-    "openai>=1.82.1",
+    "openai>=1.84.0",
+    "pydantic-settings>=2.9.1",
 ]
