--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,7 @@ requires-python = ">=3.13"
 dependencies = [
     "fastmcp>=2.8.0",
     "paho-mqtt>=2.1.0",
-    "pydantic-settings>=2.9.1",
+    "pydantic-settings>=2.10.0",
 ]
 
 [project.scripts]
@@ -19,6 +19,7 @@ build-backend = "hatchling.build"
 
 [dependency-groups]
 dev = [
+    "pre-commit>=4.2.0",
     "pytest>=8.4.0",
     "pytest-asyncio>=1.0.0",
     "ruff>=0.12.0",
