--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "mqtt-mcp"
-version = "0.2.0"
+version = "0.2.1"
 description = "A Model Context Protocol (MCP) server for MQTT"
 readme = "README.md"
 requires-python = ">=3.13"
@@ -23,5 +23,6 @@ dev = [
     "pre-commit>=4.2.0",
     "pytest>=8.4.0",
     "pytest-asyncio>=1.0.0",
+    "pytest-cov>=6.2.1",
     "ruff>=0.12.0",
 ]
