--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,4 @@
-auth__key=your-auth-key
-mqtt__host=127.0.0.1
-mqtt__port=1883
+mqtt_mcp_auth__domain=authkit-domain
+mqtt_mcp_auth__url=server-url
+mqtt_mcp_mqtt__host=127.0.0.1
+mqtt_mcp_mqtt__port=1883
