--- a/.github/workflows/prod.yml
+++ b/.github/workflows/prod.yml
@@ -34,5 +34,6 @@ jobs:
           cache-from: type=gha
           cache-to: type=gha,mode=max
           context: .
+          platforms: linux/amd64,linux/arm64
           push: true
           tags: ${{ steps.meta.outputs.tags }}
